[tool.poetry]
name = "yandex-limit-autho"
version = "0.1.0"
description = ""
authors = ["BAkhtiyar <cena61454@gmail.com>"]
readme = "README.md"
packages = [{include = "yandex_limit_autho"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
